@@ -1,4 +1,5 @@
 1.7.15
+- In audisp-remote, add a sigchld handler
 
 1.7.14
 - In auditctl rules allow a0-a3 to be negative numbers
